--- a/filewriter_tbsw.conf
+++ b/filewriter_tbsw.conf
@@ -3,17 +3,17 @@ log_level = "INFO"
 log_format = "DEFAULT"
 
 number_of_events = 0
-detectors_file = "geometries/geoid2.geo"
+detectors_file = "/media/testbeam1/corry-data/geo_files/detectors_3.geo"
 #detectors_file_updated  = "geometries/geoid2_tel_prealigned.geo"
 histogram_file = "mpx2_textwriter.root"
-output_directory = "/home/testbeam1/data/corry_textwriter_dump/"
+output_directory = "/media/testbeam1/corry-data/corry_textwriter_dump/"
 
 [Metronome]
-event_length = 2us
+#event_length = 2us
 triggers = 1
 
 [EventLoaderEUDAQ2]
-type = "MIMOSA26"
+type = "Adenium"
 get_time_residuals = true
 file_name = ""
 
@@ -22,6 +22,7 @@ name = "Monopix2_0"
 type = "Monopix2"
 get_time_residuals = true
 file_name = ""
+shift_triggers=1
 
 [TextWriter]
 file_name = ""
